[gd_scene load_steps=3 format=3 uid="uid://cso4cxc4m4sqm"]

[ext_resource type="Script" path="res://uis/create_task_ui.gd" id="1_nx7x1"]
[ext_resource type="Script" path="res://backend_client.gd" id="2_nl428"]

[node name="CreateTaskUi" type="Panel"]
custom_minimum_size = Vector2(600, 700)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nx7x1")

[node name="BackendClient" type="HTTPRequest" parent="."]
script = ExtResource("2_nl428")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 208.0
offset_top = 48.0
offset_right = -266.0
offset_bottom = 71.0
grow_horizontal = 2
text = "Create a Task"
fit_content = true

[node name="TaskLabelTextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 95.0
offset_top = 161.0
offset_right = 495.0
offset_bottom = 361.0
placeholder_text = "Task Label"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 564.0
offset_top = 14.0
offset_right = 581.0
offset_bottom = 45.0
text = "x"

[node name="CreateButton" type="Button" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 468.0
offset_right = 368.0
offset_bottom = 585.0
text = "Create"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_create_button_pressed"]
